<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resultsbackground"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/questionscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/questionscore"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/timescore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="165dp"
        android:text="@string/timescore"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />
    
      <TextView
        android:id="@+id/totalscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="270dp"
        android:text="@string/totalscore"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>